graphviz.output
Grammar

    0 $accept: graph $end

    1 graph: strict graph_type T_ID T_LBRACE stmt_list T_RBRACE

    2 strict: /* empty */
    3       | T_STRICT

    4 graph_type: T_DIGRAPH
    5           | T_GRAPH

    6 stmt_list: stmt_list1
    7          | /* empty */

    8 stmt_list1: stmt
    9           | stmt_list1 stmt

   10 stmt: stmt1
   11     | stmt1 T_SEMI

   12 stmt1: attr_stmt
   13      | node_stmt
   14      | edge_stmt
   15      | subgraph
   16      | attr_assignment

   17 attr_stmt: T_GRAPH attr_list
   18          | T_NODE attr_list
   19          | T_EDGE attr_list

   20 attr_list: T_LBRACKET a_list T_RBRACKET
   21          | T_LBRACKET T_RBRACKET
   22          | T_LBRACKET a_list T_RBRACKET attr_list
   23          | T_LBRACKET T_RBRACKET attr_list

   24 a_list: attr_assignment
   25       | attr_assignment T_COMMA a_list
   26       | attr_assignment a_list

   27 attr_assignment: T_ID T_EQ idrhs

   28 idrhs: T_ID
   29      | T_STRING

   30 node_stmt: node_id
   31          | node_id attr_list

   32 node_id: T_ID
   33        | T_ID port

   34 port: port_location
   35     | port_angle
   36     | port_location port_angle
   37     | port_angle port_location

   38 port_location: T_COLON T_ID
   39              | T_COLON T_ID T_LPAREN T_ID T_COMMA T_ID T_RPAREN

   40 port_angle: T_AT T_ID

   41 edge_stmt: node_id edgerhs
   42          | node_id edgerhs attr_list
   43          | subgraph edgerhs
   44          | subgraph edgerhs attr_list

   45 edgerhs: edgeop node_id
   46        | edgeop node_id edgerhs

   47 subgraph: T_SUBGRAPH T_ID T_LBRACE stmt_list T_RBRACE
   48         | T_SUBGRAPH T_LBRACE stmt_list T_RBRACE
   49         | T_LBRACE stmt_list T_RBRACE

   50 edgeop: T_UEDGE
   51       | T_DEDGE


Terminals, with rules where they appear

$end (0) 0
error (256)
T_LPAREN (258) 39
T_RPAREN (259) 39
T_COMMA (260) 25 39
T_COLON (261) 38 39
T_SEMI (262) 11
T_AT (263) 40
T_LBRACKET (264) 20 21 22 23
T_RBRACKET (265) 20 21 22 23
T_LBRACE (266) 1 47 48 49
T_RBRACE (267) 1 47 48 49
T_STRING (268) 29
T_EQ (269) 27
T_DIGRAPH (270) 4
T_EDGE (271) 19
T_DEDGE (272) 51
T_UEDGE (273) 50
T_GRAPH (274) 5 17
T_ID (275) 1 27 28 32 33 38 39 40 47
T_NODE (276) 18
T_STRICT (277) 3
T_SUBGRAPH (278) 47 48


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
graph (25)
    on left: 1, on right: 0
strict (26)
    on left: 2 3, on right: 1
graph_type (27)
    on left: 4 5, on right: 1
stmt_list (28)
    on left: 6 7, on right: 1 47 48 49
stmt_list1 (29)
    on left: 8 9, on right: 6 9
stmt (30)
    on left: 10 11, on right: 8 9
stmt1 (31)
    on left: 12 13 14 15 16, on right: 10 11
attr_stmt (32)
    on left: 17 18 19, on right: 12
attr_list (33)
    on left: 20 21 22 23, on right: 17 18 19 22 23 31 42 44
a_list (34)
    on left: 24 25 26, on right: 20 22 25 26
attr_assignment (35)
    on left: 27, on right: 16 24 25 26
idrhs (36)
    on left: 28 29, on right: 27
node_stmt (37)
    on left: 30 31, on right: 13
node_id (38)
    on left: 32 33, on right: 30 31 41 42 45 46
port (39)
    on left: 34 35 36 37, on right: 33
port_location (40)
    on left: 38 39, on right: 34 36 37
port_angle (41)
    on left: 40, on right: 35 36 37
edge_stmt (42)
    on left: 41 42 43 44, on right: 14
edgerhs (43)
    on left: 45 46, on right: 41 42 43 44 46
subgraph (44)
    on left: 47 48 49, on right: 15 43 44
edgeop (45)
    on left: 50 51, on right: 45 46


state 0

    0 $accept: . graph $end
    1 graph: . strict graph_type T_ID T_LBRACE stmt_list T_RBRACE
    2 strict: .  [T_DIGRAPH, T_GRAPH]
    3       | . T_STRICT

    T_STRICT  shift, and go to state 1

    $default  reduce using rule 2 (strict)

    graph   go to state 2
    strict  go to state 3


state 1

    3 strict: T_STRICT .

    $default  reduce using rule 3 (strict)


state 2

    0 $accept: graph . $end

    $end  shift, and go to state 4


state 3

    1 graph: strict . graph_type T_ID T_LBRACE stmt_list T_RBRACE
    4 graph_type: . T_DIGRAPH
    5           | . T_GRAPH

    T_DIGRAPH  shift, and go to state 5
    T_GRAPH    shift, and go to state 6

    graph_type  go to state 7


state 4

    0 $accept: graph $end .

    $default  accept


state 5

    4 graph_type: T_DIGRAPH .

    $default  reduce using rule 4 (graph_type)


state 6

    5 graph_type: T_GRAPH .

    $default  reduce using rule 5 (graph_type)


state 7

    1 graph: strict graph_type . T_ID T_LBRACE stmt_list T_RBRACE

    T_ID  shift, and go to state 8


state 8

    1 graph: strict graph_type T_ID . T_LBRACE stmt_list T_RBRACE

    T_LBRACE  shift, and go to state 9


state 9

    1 graph: strict graph_type T_ID T_LBRACE . stmt_list T_RBRACE
    6 stmt_list: . stmt_list1
    7          | .  [T_RBRACE]
    8 stmt_list1: . stmt
    9           | . stmt_list1 stmt
   10 stmt: . stmt1
   11     | . stmt1 T_SEMI
   12 stmt1: . attr_stmt
   13      | . node_stmt
   14      | . edge_stmt
   15      | . subgraph
   16      | . attr_assignment
   17 attr_stmt: . T_GRAPH attr_list
   18          | . T_NODE attr_list
   19          | . T_EDGE attr_list
   27 attr_assignment: . T_ID T_EQ idrhs
   30 node_stmt: . node_id
   31          | . node_id attr_list
   32 node_id: . T_ID
   33        | . T_ID port
   41 edge_stmt: . node_id edgerhs
   42          | . node_id edgerhs attr_list
   43          | . subgraph edgerhs
   44          | . subgraph edgerhs attr_list
   47 subgraph: . T_SUBGRAPH T_ID T_LBRACE stmt_list T_RBRACE
   48         | . T_SUBGRAPH T_LBRACE stmt_list T_RBRACE
   49         | . T_LBRACE stmt_list T_RBRACE

    T_LBRACE    shift, and go to state 10
    T_EDGE      shift, and go to state 11
    T_GRAPH     shift, and go to state 12
    T_ID        shift, and go to state 13
    T_NODE      shift, and go to state 14
    T_SUBGRAPH  shift, and go to state 15

    $default  reduce using rule 7 (stmt_list)

    stmt_list        go to state 16
    stmt_list1       go to state 17
    stmt             go to state 18
    stmt1            go to state 19
    attr_stmt        go to state 20
    attr_assignment  go to state 21
    node_stmt        go to state 22
    node_id          go to state 23
    edge_stmt        go to state 24
    subgraph         go to state 25


state 10

    6 stmt_list: . stmt_list1
    7          | .  [T_RBRACE]
    8 stmt_list1: . stmt
    9           | . stmt_list1 stmt
   10 stmt: . stmt1
   11     | . stmt1 T_SEMI
   12 stmt1: . attr_stmt
   13      | . node_stmt
   14      | . edge_stmt
   15      | . subgraph
   16      | . attr_assignment
   17 attr_stmt: . T_GRAPH attr_list
   18          | . T_NODE attr_list
   19          | . T_EDGE attr_list
   27 attr_assignment: . T_ID T_EQ idrhs
   30 node_stmt: . node_id
   31          | . node_id attr_list
   32 node_id: . T_ID
   33        | . T_ID port
   41 edge_stmt: . node_id edgerhs
   42          | . node_id edgerhs attr_list
   43          | . subgraph edgerhs
   44          | . subgraph edgerhs attr_list
   47 subgraph: . T_SUBGRAPH T_ID T_LBRACE stmt_list T_RBRACE
   48         | . T_SUBGRAPH T_LBRACE stmt_list T_RBRACE
   49         | . T_LBRACE stmt_list T_RBRACE
   49         | T_LBRACE . stmt_list T_RBRACE

    T_LBRACE    shift, and go to state 10
    T_EDGE      shift, and go to state 11
    T_GRAPH     shift, and go to state 12
    T_ID        shift, and go to state 13
    T_NODE      shift, and go to state 14
    T_SUBGRAPH  shift, and go to state 15

    $default  reduce using rule 7 (stmt_list)

    stmt_list        go to state 26
    stmt_list1       go to state 17
    stmt             go to state 18
    stmt1            go to state 19
    attr_stmt        go to state 20
    attr_assignment  go to state 21
    node_stmt        go to state 22
    node_id          go to state 23
    edge_stmt        go to state 24
    subgraph         go to state 25


state 11

   19 attr_stmt: T_EDGE . attr_list
   20 attr_list: . T_LBRACKET a_list T_RBRACKET
   21          | . T_LBRACKET T_RBRACKET
   22          | . T_LBRACKET a_list T_RBRACKET attr_list
   23          | . T_LBRACKET T_RBRACKET attr_list

    T_LBRACKET  shift, and go to state 27

    attr_list  go to state 28


state 12

   17 attr_stmt: T_GRAPH . attr_list
   20 attr_list: . T_LBRACKET a_list T_RBRACKET
   21          | . T_LBRACKET T_RBRACKET
   22          | . T_LBRACKET a_list T_RBRACKET attr_list
   23          | . T_LBRACKET T_RBRACKET attr_list

    T_LBRACKET  shift, and go to state 27

    attr_list  go to state 29


state 13

   27 attr_assignment: T_ID . T_EQ idrhs
   32 node_id: T_ID .  [T_SEMI, T_LBRACKET, T_LBRACE, T_RBRACE, T_EDGE, T_DEDGE, T_UEDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   33        | T_ID . port
   34 port: . port_location
   35     | . port_angle
   36     | . port_location port_angle
   37     | . port_angle port_location
   38 port_location: . T_COLON T_ID
   39              | . T_COLON T_ID T_LPAREN T_ID T_COMMA T_ID T_RPAREN
   40 port_angle: . T_AT T_ID

    T_COLON  shift, and go to state 30
    T_AT     shift, and go to state 31
    T_EQ     shift, and go to state 32

    $default  reduce using rule 32 (node_id)

    port           go to state 33
    port_location  go to state 34
    port_angle     go to state 35


state 14

   18 attr_stmt: T_NODE . attr_list
   20 attr_list: . T_LBRACKET a_list T_RBRACKET
   21          | . T_LBRACKET T_RBRACKET
   22          | . T_LBRACKET a_list T_RBRACKET attr_list
   23          | . T_LBRACKET T_RBRACKET attr_list

    T_LBRACKET  shift, and go to state 27

    attr_list  go to state 36


state 15

   47 subgraph: T_SUBGRAPH . T_ID T_LBRACE stmt_list T_RBRACE
   48         | T_SUBGRAPH . T_LBRACE stmt_list T_RBRACE

    T_LBRACE  shift, and go to state 37
    T_ID      shift, and go to state 38


state 16

    1 graph: strict graph_type T_ID T_LBRACE stmt_list . T_RBRACE

    T_RBRACE  shift, and go to state 39


state 17

    6 stmt_list: stmt_list1 .  [T_RBRACE]
    9 stmt_list1: stmt_list1 . stmt
   10 stmt: . stmt1
   11     | . stmt1 T_SEMI
   12 stmt1: . attr_stmt
   13      | . node_stmt
   14      | . edge_stmt
   15      | . subgraph
   16      | . attr_assignment
   17 attr_stmt: . T_GRAPH attr_list
   18          | . T_NODE attr_list
   19          | . T_EDGE attr_list
   27 attr_assignment: . T_ID T_EQ idrhs
   30 node_stmt: . node_id
   31          | . node_id attr_list
   32 node_id: . T_ID
   33        | . T_ID port
   41 edge_stmt: . node_id edgerhs
   42          | . node_id edgerhs attr_list
   43          | . subgraph edgerhs
   44          | . subgraph edgerhs attr_list
   47 subgraph: . T_SUBGRAPH T_ID T_LBRACE stmt_list T_RBRACE
   48         | . T_SUBGRAPH T_LBRACE stmt_list T_RBRACE
   49         | . T_LBRACE stmt_list T_RBRACE

    T_LBRACE    shift, and go to state 10
    T_EDGE      shift, and go to state 11
    T_GRAPH     shift, and go to state 12
    T_ID        shift, and go to state 13
    T_NODE      shift, and go to state 14
    T_SUBGRAPH  shift, and go to state 15

    $default  reduce using rule 6 (stmt_list)

    stmt             go to state 40
    stmt1            go to state 19
    attr_stmt        go to state 20
    attr_assignment  go to state 21
    node_stmt        go to state 22
    node_id          go to state 23
    edge_stmt        go to state 24
    subgraph         go to state 25


state 18

    8 stmt_list1: stmt .

    $default  reduce using rule 8 (stmt_list1)


state 19

   10 stmt: stmt1 .  [T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   11     | stmt1 . T_SEMI

    T_SEMI  shift, and go to state 41

    $default  reduce using rule 10 (stmt)


state 20

   12 stmt1: attr_stmt .

    $default  reduce using rule 12 (stmt1)


state 21

   16 stmt1: attr_assignment .

    $default  reduce using rule 16 (stmt1)


state 22

   13 stmt1: node_stmt .

    $default  reduce using rule 13 (stmt1)


state 23

   20 attr_list: . T_LBRACKET a_list T_RBRACKET
   21          | . T_LBRACKET T_RBRACKET
   22          | . T_LBRACKET a_list T_RBRACKET attr_list
   23          | . T_LBRACKET T_RBRACKET attr_list
   30 node_stmt: node_id .  [T_SEMI, T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   31          | node_id . attr_list
   41 edge_stmt: node_id . edgerhs
   42          | node_id . edgerhs attr_list
   45 edgerhs: . edgeop node_id
   46        | . edgeop node_id edgerhs
   50 edgeop: . T_UEDGE
   51       | . T_DEDGE

    T_LBRACKET  shift, and go to state 27
    T_DEDGE     shift, and go to state 42
    T_UEDGE     shift, and go to state 43

    $default  reduce using rule 30 (node_stmt)

    attr_list  go to state 44
    edgerhs    go to state 45
    edgeop     go to state 46


state 24

   14 stmt1: edge_stmt .

    $default  reduce using rule 14 (stmt1)


state 25

   15 stmt1: subgraph .  [T_SEMI, T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   43 edge_stmt: subgraph . edgerhs
   44          | subgraph . edgerhs attr_list
   45 edgerhs: . edgeop node_id
   46        | . edgeop node_id edgerhs
   50 edgeop: . T_UEDGE
   51       | . T_DEDGE

    T_DEDGE  shift, and go to state 42
    T_UEDGE  shift, and go to state 43

    $default  reduce using rule 15 (stmt1)

    edgerhs  go to state 47
    edgeop   go to state 46


state 26

   49 subgraph: T_LBRACE stmt_list . T_RBRACE

    T_RBRACE  shift, and go to state 48


state 27

   20 attr_list: T_LBRACKET . a_list T_RBRACKET
   21          | T_LBRACKET . T_RBRACKET
   22          | T_LBRACKET . a_list T_RBRACKET attr_list
   23          | T_LBRACKET . T_RBRACKET attr_list
   24 a_list: . attr_assignment
   25       | . attr_assignment T_COMMA a_list
   26       | . attr_assignment a_list
   27 attr_assignment: . T_ID T_EQ idrhs

    T_RBRACKET  shift, and go to state 49
    T_ID        shift, and go to state 50

    a_list           go to state 51
    attr_assignment  go to state 52


state 28

   19 attr_stmt: T_EDGE attr_list .

    $default  reduce using rule 19 (attr_stmt)


state 29

   17 attr_stmt: T_GRAPH attr_list .

    $default  reduce using rule 17 (attr_stmt)


state 30

   38 port_location: T_COLON . T_ID
   39              | T_COLON . T_ID T_LPAREN T_ID T_COMMA T_ID T_RPAREN

    T_ID  shift, and go to state 53


state 31

   40 port_angle: T_AT . T_ID

    T_ID  shift, and go to state 54


state 32

   27 attr_assignment: T_ID T_EQ . idrhs
   28 idrhs: . T_ID
   29      | . T_STRING

    T_STRING  shift, and go to state 55
    T_ID      shift, and go to state 56

    idrhs  go to state 57


state 33

   33 node_id: T_ID port .

    $default  reduce using rule 33 (node_id)


state 34

   34 port: port_location .  [T_SEMI, T_LBRACKET, T_LBRACE, T_RBRACE, T_EDGE, T_DEDGE, T_UEDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   36     | port_location . port_angle
   40 port_angle: . T_AT T_ID

    T_AT  shift, and go to state 31

    $default  reduce using rule 34 (port)

    port_angle  go to state 58


state 35

   35 port: port_angle .  [T_SEMI, T_LBRACKET, T_LBRACE, T_RBRACE, T_EDGE, T_DEDGE, T_UEDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   37     | port_angle . port_location
   38 port_location: . T_COLON T_ID
   39              | . T_COLON T_ID T_LPAREN T_ID T_COMMA T_ID T_RPAREN

    T_COLON  shift, and go to state 30

    $default  reduce using rule 35 (port)

    port_location  go to state 59


state 36

   18 attr_stmt: T_NODE attr_list .

    $default  reduce using rule 18 (attr_stmt)


state 37

    6 stmt_list: . stmt_list1
    7          | .  [T_RBRACE]
    8 stmt_list1: . stmt
    9           | . stmt_list1 stmt
   10 stmt: . stmt1
   11     | . stmt1 T_SEMI
   12 stmt1: . attr_stmt
   13      | . node_stmt
   14      | . edge_stmt
   15      | . subgraph
   16      | . attr_assignment
   17 attr_stmt: . T_GRAPH attr_list
   18          | . T_NODE attr_list
   19          | . T_EDGE attr_list
   27 attr_assignment: . T_ID T_EQ idrhs
   30 node_stmt: . node_id
   31          | . node_id attr_list
   32 node_id: . T_ID
   33        | . T_ID port
   41 edge_stmt: . node_id edgerhs
   42          | . node_id edgerhs attr_list
   43          | . subgraph edgerhs
   44          | . subgraph edgerhs attr_list
   47 subgraph: . T_SUBGRAPH T_ID T_LBRACE stmt_list T_RBRACE
   48         | . T_SUBGRAPH T_LBRACE stmt_list T_RBRACE
   48         | T_SUBGRAPH T_LBRACE . stmt_list T_RBRACE
   49         | . T_LBRACE stmt_list T_RBRACE

    T_LBRACE    shift, and go to state 10
    T_EDGE      shift, and go to state 11
    T_GRAPH     shift, and go to state 12
    T_ID        shift, and go to state 13
    T_NODE      shift, and go to state 14
    T_SUBGRAPH  shift, and go to state 15

    $default  reduce using rule 7 (stmt_list)

    stmt_list        go to state 60
    stmt_list1       go to state 17
    stmt             go to state 18
    stmt1            go to state 19
    attr_stmt        go to state 20
    attr_assignment  go to state 21
    node_stmt        go to state 22
    node_id          go to state 23
    edge_stmt        go to state 24
    subgraph         go to state 25


state 38

   47 subgraph: T_SUBGRAPH T_ID . T_LBRACE stmt_list T_RBRACE

    T_LBRACE  shift, and go to state 61


state 39

    1 graph: strict graph_type T_ID T_LBRACE stmt_list T_RBRACE .

    $default  reduce using rule 1 (graph)


state 40

    9 stmt_list1: stmt_list1 stmt .

    $default  reduce using rule 9 (stmt_list1)


state 41

   11 stmt: stmt1 T_SEMI .

    $default  reduce using rule 11 (stmt)


state 42

   51 edgeop: T_DEDGE .

    $default  reduce using rule 51 (edgeop)


state 43

   50 edgeop: T_UEDGE .

    $default  reduce using rule 50 (edgeop)


state 44

   31 node_stmt: node_id attr_list .

    $default  reduce using rule 31 (node_stmt)


state 45

   20 attr_list: . T_LBRACKET a_list T_RBRACKET
   21          | . T_LBRACKET T_RBRACKET
   22          | . T_LBRACKET a_list T_RBRACKET attr_list
   23          | . T_LBRACKET T_RBRACKET attr_list
   41 edge_stmt: node_id edgerhs .  [T_SEMI, T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   42          | node_id edgerhs . attr_list

    T_LBRACKET  shift, and go to state 27

    $default  reduce using rule 41 (edge_stmt)

    attr_list  go to state 62


state 46

   32 node_id: . T_ID
   33        | . T_ID port
   45 edgerhs: edgeop . node_id
   46        | edgeop . node_id edgerhs

    T_ID  shift, and go to state 63

    node_id  go to state 64


state 47

   20 attr_list: . T_LBRACKET a_list T_RBRACKET
   21          | . T_LBRACKET T_RBRACKET
   22          | . T_LBRACKET a_list T_RBRACKET attr_list
   23          | . T_LBRACKET T_RBRACKET attr_list
   43 edge_stmt: subgraph edgerhs .  [T_SEMI, T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   44          | subgraph edgerhs . attr_list

    T_LBRACKET  shift, and go to state 27

    $default  reduce using rule 43 (edge_stmt)

    attr_list  go to state 65


state 48

   49 subgraph: T_LBRACE stmt_list T_RBRACE .

    $default  reduce using rule 49 (subgraph)


state 49

   20 attr_list: . T_LBRACKET a_list T_RBRACKET
   21          | . T_LBRACKET T_RBRACKET  [T_SEMI, T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   21          | T_LBRACKET T_RBRACKET .  [T_SEMI, T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   22          | . T_LBRACKET a_list T_RBRACKET attr_list
   23          | . T_LBRACKET T_RBRACKET attr_list
   23          | T_LBRACKET T_RBRACKET . attr_list

    T_LBRACKET  shift, and go to state 27

    $default  reduce using rule 21 (attr_list)

    attr_list  go to state 66


state 50

   27 attr_assignment: T_ID . T_EQ idrhs

    T_EQ  shift, and go to state 32


state 51

   20 attr_list: T_LBRACKET a_list . T_RBRACKET
   22          | T_LBRACKET a_list . T_RBRACKET attr_list

    T_RBRACKET  shift, and go to state 67


state 52

   24 a_list: . attr_assignment  [T_RBRACKET]
   24       | attr_assignment .  [T_RBRACKET]
   25       | . attr_assignment T_COMMA a_list
   25       | attr_assignment . T_COMMA a_list
   26       | . attr_assignment a_list
   26       | attr_assignment . a_list
   27 attr_assignment: . T_ID T_EQ idrhs

    T_COMMA  shift, and go to state 68
    T_ID     shift, and go to state 50

    $default  reduce using rule 24 (a_list)

    a_list           go to state 69
    attr_assignment  go to state 52


state 53

   38 port_location: T_COLON T_ID .  [T_SEMI, T_AT, T_LBRACKET, T_LBRACE, T_RBRACE, T_EDGE, T_DEDGE, T_UEDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   39              | T_COLON T_ID . T_LPAREN T_ID T_COMMA T_ID T_RPAREN

    T_LPAREN  shift, and go to state 70

    $default  reduce using rule 38 (port_location)


state 54

   40 port_angle: T_AT T_ID .

    $default  reduce using rule 40 (port_angle)


state 55

   29 idrhs: T_STRING .

    $default  reduce using rule 29 (idrhs)


state 56

   28 idrhs: T_ID .

    $default  reduce using rule 28 (idrhs)


state 57

   27 attr_assignment: T_ID T_EQ idrhs .

    $default  reduce using rule 27 (attr_assignment)


state 58

   36 port: port_location port_angle .

    $default  reduce using rule 36 (port)


state 59

   37 port: port_angle port_location .

    $default  reduce using rule 37 (port)


state 60

   48 subgraph: T_SUBGRAPH T_LBRACE stmt_list . T_RBRACE

    T_RBRACE  shift, and go to state 71


state 61

    6 stmt_list: . stmt_list1
    7          | .  [T_RBRACE]
    8 stmt_list1: . stmt
    9           | . stmt_list1 stmt
   10 stmt: . stmt1
   11     | . stmt1 T_SEMI
   12 stmt1: . attr_stmt
   13      | . node_stmt
   14      | . edge_stmt
   15      | . subgraph
   16      | . attr_assignment
   17 attr_stmt: . T_GRAPH attr_list
   18          | . T_NODE attr_list
   19          | . T_EDGE attr_list
   27 attr_assignment: . T_ID T_EQ idrhs
   30 node_stmt: . node_id
   31          | . node_id attr_list
   32 node_id: . T_ID
   33        | . T_ID port
   41 edge_stmt: . node_id edgerhs
   42          | . node_id edgerhs attr_list
   43          | . subgraph edgerhs
   44          | . subgraph edgerhs attr_list
   47 subgraph: . T_SUBGRAPH T_ID T_LBRACE stmt_list T_RBRACE
   47         | T_SUBGRAPH T_ID T_LBRACE . stmt_list T_RBRACE
   48         | . T_SUBGRAPH T_LBRACE stmt_list T_RBRACE
   49         | . T_LBRACE stmt_list T_RBRACE

    T_LBRACE    shift, and go to state 10
    T_EDGE      shift, and go to state 11
    T_GRAPH     shift, and go to state 12
    T_ID        shift, and go to state 13
    T_NODE      shift, and go to state 14
    T_SUBGRAPH  shift, and go to state 15

    $default  reduce using rule 7 (stmt_list)

    stmt_list        go to state 72
    stmt_list1       go to state 17
    stmt             go to state 18
    stmt1            go to state 19
    attr_stmt        go to state 20
    attr_assignment  go to state 21
    node_stmt        go to state 22
    node_id          go to state 23
    edge_stmt        go to state 24
    subgraph         go to state 25


state 62

   42 edge_stmt: node_id edgerhs attr_list .

    $default  reduce using rule 42 (edge_stmt)


state 63

   32 node_id: T_ID .  [T_SEMI, T_LBRACKET, T_LBRACE, T_RBRACE, T_EDGE, T_DEDGE, T_UEDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   33        | T_ID . port
   34 port: . port_location
   35     | . port_angle
   36     | . port_location port_angle
   37     | . port_angle port_location
   38 port_location: . T_COLON T_ID
   39              | . T_COLON T_ID T_LPAREN T_ID T_COMMA T_ID T_RPAREN
   40 port_angle: . T_AT T_ID

    T_COLON  shift, and go to state 30
    T_AT     shift, and go to state 31

    $default  reduce using rule 32 (node_id)

    port           go to state 33
    port_location  go to state 34
    port_angle     go to state 35


state 64

   45 edgerhs: . edgeop node_id  [T_SEMI, T_LBRACKET, T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   45        | edgeop node_id .  [T_SEMI, T_LBRACKET, T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   46        | . edgeop node_id edgerhs
   46        | edgeop node_id . edgerhs
   50 edgeop: . T_UEDGE
   51       | . T_DEDGE

    T_DEDGE  shift, and go to state 42
    T_UEDGE  shift, and go to state 43

    $default  reduce using rule 45 (edgerhs)

    edgerhs  go to state 73
    edgeop   go to state 46


state 65

   44 edge_stmt: subgraph edgerhs attr_list .

    $default  reduce using rule 44 (edge_stmt)


state 66

   23 attr_list: T_LBRACKET T_RBRACKET attr_list .

    $default  reduce using rule 23 (attr_list)


state 67

   20 attr_list: . T_LBRACKET a_list T_RBRACKET  [T_SEMI, T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   20          | T_LBRACKET a_list T_RBRACKET .  [T_SEMI, T_LBRACE, T_RBRACE, T_EDGE, T_GRAPH, T_ID, T_NODE, T_SUBGRAPH]
   21          | . T_LBRACKET T_RBRACKET
   22          | . T_LBRACKET a_list T_RBRACKET attr_list
   22          | T_LBRACKET a_list T_RBRACKET . attr_list
   23          | . T_LBRACKET T_RBRACKET attr_list

    T_LBRACKET  shift, and go to state 27

    $default  reduce using rule 20 (attr_list)

    attr_list  go to state 74


state 68

   24 a_list: . attr_assignment
   25       | . attr_assignment T_COMMA a_list
   25       | attr_assignment T_COMMA . a_list
   26       | . attr_assignment a_list
   27 attr_assignment: . T_ID T_EQ idrhs

    T_ID  shift, and go to state 50

    a_list           go to state 75
    attr_assignment  go to state 52


state 69

   26 a_list: attr_assignment a_list .

    $default  reduce using rule 26 (a_list)


state 70

   39 port_location: T_COLON T_ID T_LPAREN . T_ID T_COMMA T_ID T_RPAREN

    T_ID  shift, and go to state 76


state 71

   48 subgraph: T_SUBGRAPH T_LBRACE stmt_list T_RBRACE .

    $default  reduce using rule 48 (subgraph)


state 72

   47 subgraph: T_SUBGRAPH T_ID T_LBRACE stmt_list . T_RBRACE

    T_RBRACE  shift, and go to state 77


state 73

   46 edgerhs: edgeop node_id edgerhs .

    $default  reduce using rule 46 (edgerhs)


state 74

   22 attr_list: T_LBRACKET a_list T_RBRACKET attr_list .

    $default  reduce using rule 22 (attr_list)


state 75

   25 a_list: attr_assignment T_COMMA a_list .

    $default  reduce using rule 25 (a_list)


state 76
